Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoDefault.java
/*
 * @test /nodynamiccopyright/
 * @bug 8022322
 * @summary Default methods are not allowed in an annotation.
 * @compile/fail/ref=NoDefault.out -XDrawDiagnostics NoDefault.java
 */
@interface NoDefault {
    default int m() {return 0;}
}
