Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoDefault.out
NoDefault.java:8:17: compiler.err.mod.not.allowed.here: default
NoDefault.java:8:21: compiler.err.intf.meth.cant.have.body
2 errors